--- a/es/japanese-a2.html
+++ b/es/japanese-a2.html
@@ -86,12 +86,13 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>Japanese A2</h2>
+          <h2>Japonés A2</h2>
       <p>
-        At this level, the grammatical structures and communication skills of the previous level are developed a little more.
+        En este nivel se desarrollan un poco más las estructuras gramaticales y las habilidades comunicativas del nivel anterior.
 
-        FThe speaker is expected to be able to describe in the present and in the past simple aspects of their immediate environment (family, shopping, work, directions) as well as to communicate in a simple way basic, simple and direct exchanges of information.
-      <h2>Mini Tests </h2>
+                 Se espera que el hablante sea capaz de describir en presente y en pasado aspectos sencillos de su entorno inmediato (familia, compras, trabajo, direcciones) así como comunicar de forma sencilla intercambios de información básicos, sencillos y directos.
+
+                       <h2>Mini Tests </h2>
 
       <button onclick="toggleContent42()">Mini-Test 1</button>
                  <div id="content42" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
