--- a/es/japanese-c2.html
+++ b/es/japanese-c2.html
@@ -86,7 +86,7 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>Japanese C2</h2>
+          <h2>Japonés C2</h2>
       <p>
         Y llegamos finalmente a la cúspide de la pirámide, el nivel que se equipara al de un nativo, aun cuando se pueda discernir que la lengua materna de la persona es otra.
 
