--- a/pl/japanese-a1.html
+++ b/pl/japanese-a1.html
@@ -88,13 +88,15 @@
   <article class="img-info">
           <h2>Japanese A1</h2>
           <p>
-            This is the most basic level of mastery of a language. At this level the speaker is expected to be able to interact easily with others who make an effort to speak slowly and clearly, not in a natural conversational rhythm.
+            Jest to najbardziej podstawowy poziom opanowania języka. Na tym poziomie oczekuje się, że mówca będzie w stanie łatwo wchodzić w interakcje z innymi, którzy starają się mówić powoli i wyraźnie, a nie w naturalnym rytmie konwersacji.
 
-           The person is expected to be able to carry out basic conversations such as introducing himself, asking and answering questions about personal data (name, where he lives, hobbies).
+                        Oczekuje się, że osoba będzie w stanie prowadzić podstawowe rozmowy, takie jak przedstawianie się, zadawanie pytań i odpowiadanie na pytania dotyczące danych osobowych (imię i nazwisko, miejsce zamieszkania, hobby).
 
-           The vocabulary is basic, and is limited to concrete nouns and close to the day (domestic animals, parts of the house, food, parts of the body).
-          </p>
-          <h2>Mini Tests </h2>
+                        Słownictwo jest podstawowe i ogranicza się do rzeczowników konkretnych i zbliżonych do dnia (zwierzęta domowe, części domu, jedzenie, części ciała).
+
+
+                        </p>
+          <h2>Minitesty </h2>
 
           <button onclick="toggleContent2()">Mini Test 1</button>
           <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
