--- a/pl/japanese-a2.html
+++ b/pl/japanese-a2.html
@@ -86,12 +86,13 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>Japanese A2</h2>
+          <h2>Japoński A2</h2>
       <p>
-        At this level, the grammatical structures and communication skills of the previous level are developed a little more.
+        Na tym poziomie struktury gramatyczne i umiejętności komunikacyjne z poprzedniego poziomu są nieco bardziej rozwinięte.
 
-        FThe speaker is expected to be able to describe in the present and in the past simple aspects of their immediate environment (family, shopping, work, directions) as well as to communicate in a simple way basic, simple and direct exchanges of information.
-      <h2>Mini Tests </h2>
+                 Od mówcy oczekuje się umiejętności opisywania w teraźniejszości i przeszłości prostych aspektów swojego najbliższego otoczenia (rodzina, zakupy, praca, kierunki) oraz komunikowania się w prosty sposób w zakresie podstawowych, prostych i bezpośrednich wymian informacji.
+
+                       <h2>Minitesty </h2>
 
       <button onclick="toggleContent42()">Mini-Test 1</button>
                  <div id="content42" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
