--- a/pl/japanese-c1.html
+++ b/pl/japanese-c1.html
@@ -87,16 +87,17 @@
 <div class="wrapper">
   <article class="img-info">
 
-          <h2>Japanese C1</h2>
+          <h2>Japoński C1</h2>
       <p>
-        It is what is known as a "high level" in mastering a language.
+        Jest to tak zwany „wysoki poziom” w opanowaniu języka.
 
-                   At this level, not only is one able to understand complex texts, but one can also infer and make deductions about what the text implies (if a text criticizes, advises, questions, or highlights a specific topic). You can produce well-structured and detailed texts with a wide range of vocabulary and linguistic cohesion.
+                            Na tym poziomie osoba jest w stanie nie tylko zrozumieć złożone teksty, ale także wnioskować i wyciągać wnioski na temat tego, co implikuje tekst (czy tekst krytykuje, doradza, kwestionuje lub podkreśla określony temat). Potrafisz tworzyć dobrze ustrukturyzowane i szczegółowe teksty z szerokim zakresem słownictwa i spójnością językową.
 
-                   The speaker is able to use effective language in a large number of social, professional and academic contexts with ease.
+                            Mówca jest w stanie z łatwością używać skutecznego języka w wielu kontekstach społecznych, zawodowych i akademickich.
 
-                   You can express yourself fluently with expressions and turns of phrase and make few errors. Its pronunciation does not make it difficult at all for the listener to understand the message.
-                       </p>
+                            Możesz płynnie wyrażać się za pomocą wyrażeń i zwrotów zdań oraz popełniać niewiele błędów. Jego wymowa wcale nie utrudnia słuchaczowi zrozumienia przekazu.
+
+                                                 </p>
           <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
           </div>
