--- a/pl/japanese-c2.html
+++ b/pl/japanese-c2.html
@@ -86,19 +86,22 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>Japanese C2</h2>
-      <p>Y llegamos finalmente a la cúspide de la pirámide, el nivel que se equipara al de un nativo, aun cuando se pueda discernir que la lengua materna de la persona es otra.
+          <h2>Japoński C2</h2>
+      <p>
 
-          La pronunciación del hablante es casi perfecta con poquísimos errores que a veces incluso pasan desapercibidos. Puede expresarse espontáneamente con mucha fluidez utilizando un lenguaje variado e incluso haciendo uso de regionalismos.
+        I wreszcie dochodzimy do szczytu piramidy, poziomu równego poziomowi tubylca, nawet jeśli można rozpoznać, że język ojczysty danej osoby jest inny.
 
-          Es capaz de entender conversaciones y discurso nativo (radio, televisión) sin apenas esfuerzo y puede leer todo tipo de textos sin que el idioma sea un impedimento para la correcta comprensión.
+                   Wymowa lektora jest prawie idealna, z bardzo małą liczbą błędów, które czasami pozostają niezauważone. Potrafisz bardzo płynnie i spontanicznie wyrażać się używając różnych języków, a nawet posługując się regionalizmami.
+
+                   Jest w stanie przy niewielkim wysiłku zrozumieć konwersacje i mowę ojczystą (radio, telewizja) oraz czytać wszelkiego rodzaju teksty, przy czym język nie jest przeszkodą w prawidłowym zrozumieniu.
 
 
 
-          Como os podéis imaginar, alcanzar el último nivel no es una cuestión de apuntarse a un curso intensivo, sino que es necesario mucho esfuerzo, constancia, estudio, práctica, pasar tiempo en el extranjero inmerso en la lengua objetivo e incluso atender a factores como las capacidades lingüísticas personales, la edad a la que se empieza a aprender un idioma, etc.
+                   Jak możesz sobie wyobrazić, dojście do ostatniego poziomu nie jest kwestią zapisania się na intensywny kurs, ale raczej dużo wysiłku, wytrwałości, nauki, praktyki, spędzenia czasu za granicą zanurzonego w języku docelowym, a nawet zwracania uwagi na takie czynniki jak: osobiste zdolności językowe, wiek, w którym zaczyna się uczyć języka itp.
 
-          Para los niveles anteriores igualmente hace falta mucho trabajo y constancia, pero son más asequibles sin necesidad de vivir mucho tiempo en el extranjero. Leyendo, escuchando música en inglés, asistiendo a clase y utilizando los recursos que nos da Internet es posible alcanzar el nivel B1 o B2 en un par de años.
-      </p>
+                   W przypadku poprzednich poziomów również wymaga to dużo pracy i wytrwałości, ale są one bardziej przystępne bez konieczności długiego pobytu za granicą. Czytając, słuchając muzyki w języku angielskim, uczęszczając na zajęcia i korzystając z zasobów Internetu, można w ciągu kilku lat osiągnąć poziom B1 lub B2.
+
+                       </p>
          <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
           </div>
