--- a/pl/spanish-c1.html
+++ b/pl/spanish-c1.html
@@ -110,14 +110,17 @@
           </div>
 
           <h2>Poziom C1</h2>
-      <p>Es lo que se conoce como «Poziom alto» en el dominio de una lengua.
+      <p>
 
-          En este Poziom ya no solo se es capaz de comprender textos complejos sino que se pueden inferir y hacer deducciones sobre lo que el texto da a entender (si un texto critica, aconseja, pone en duda, resalta un tema en concreto). Puede producir textos bien estructurados y detallados con una amplia variedad de vocabulario y cohesión lingüística.
+        Jest to tak zwany „wysoki poziom” w dziedzinie języka.
 
-          El hablante es capaz de utilizar un lenguaje efectivo en un gran número de contextos sociales, profesionales y académicos con naturalidad.
+                   Na tym Poziomie można nie tylko zrozumieć złożone teksty, ale także wnioskować i dedukować, co implikuje tekst (czy tekst krytykuje, doradza, wątpi lub podkreśla określony temat). Potrafisz tworzyć dobrze ustrukturyzowane i szczegółowe teksty z szerokim zakresem słownictwa i spójnością językową.
 
-          Puede expresarse con fluidez y con expresiones y giros lingüísticos y comete pocos errores. Su pronunciación no dificulta para nada la comprensión del mensaje por el oyente.
-      </p>
+                   Mówca jest w stanie z łatwością używać skutecznego języka w wielu kontekstach społecznych, zawodowych i akademickich.
+
+                   Możesz płynnie wyrażać się za pomocą wyrażeń i zwrotów zdań oraz popełniać niewiele błędów. Jego wymowa wcale nie utrudnia słuchaczowi zrozumienia przekazu.
+
+                       </p>
           <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
           </div>
