--- a/es/japanese-b2.html
+++ b/es/japanese-b2.html
@@ -86,14 +86,15 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>Japanese B2</h2>
+          <h2>Japonés B2</h2>
       <p>
-        This is the medium-high level that is spoken of when someone wants to refer to their level of language proficiency.
+        Este es el nivel medio-alto del que se habla cuando alguien quiere referirse a su nivel de dominio del idioma.
 
-                   The speaker is expected to be able to understand and produce complex texts on specific topics and with a certain level of abstraction (write a job application letter, write a review of a film, show or book, write an essay on a problem , for example lifestyle, diet, or environment)
+                            Se espera que el hablante sea capaz de comprender y producir textos complejos sobre temas específicos y con un cierto nivel de abstracción (escribir una carta de solicitud de empleo, escribir una reseña de una película, espectáculo o libro, escribir un ensayo sobre un problema, por ejemplo estilo de vida, dieta o medio ambiente)
 
-                   You are able to engage in a conversation with native speakers with a certain level of fluency and spontaneity, with few errors that also do not make it too difficult to understand what the speaker is saying. You can express opinions and points of view, as well as provide advantages and disadvantages on a certain topic.
-      </p>
+                            Eres capaz de entablar una conversación con hablantes nativos con cierto nivel de fluidez y espontaneidad, con pocos errores que además no dificultan demasiado la comprensión de lo que dice el hablante. Puede expresar opiniones y puntos de vista, así como aportar ventajas y desventajas sobre un tema determinado.
+
+                                </p>
       </div>
       <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
 
