--- a/es/japanese-c1.html
+++ b/es/japanese-c1.html
@@ -87,16 +87,17 @@
 <div class="wrapper">
   <article class="img-info">
 
-          <h2>Japanese C1</h2>
+          <h2>Japonés C1</h2>
       <p>
-        It is what is known as a "high level" in mastering a language.
+        Es lo que se conoce como un "nivel alto" en el dominio de un idioma.
 
-                   At this level, not only is one able to understand complex texts, but one can also infer and make deductions about what the text implies (if a text criticizes, advises, questions, or highlights a specific topic). You can produce well-structured and detailed texts with a wide range of vocabulary and linguistic cohesion.
+                            En este nivel, no solo se pueden comprender textos complejos, sino que también se pueden inferir y hacer deducciones sobre lo que implica el texto (si un texto critica, aconseja, cuestiona o destaca un tema específico). Puede producir textos bien estructurados y detallados con una amplia gama de vocabulario y cohesión lingüística.
 
-                   The speaker is able to use effective language in a large number of social, professional and academic contexts with ease.
+                            El hablante es capaz de usar un lenguaje efectivo en un gran número de contextos sociales, profesionales y académicos con facilidad.
 
-                   You can express yourself fluently with expressions and turns of phrase and make few errors. Its pronunciation does not make it difficult at all for the listener to understand the message.
-                       </p>
+                            Puede expresarse con fluidez con expresiones y giros de frase y cometer pocos errores. Su pronunciación no dificulta en absoluto al oyente la comprensión del mensaje.
+
+                                                 </p>
           <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
           </div>
