--- a/pl/spanish-b2.html
+++ b/pl/spanish-b2.html
@@ -110,7 +110,8 @@
           </div>
 
           <h2>Poziom B2</h2>
-      <p>Jest to średnio-wysoki poziom, o którym mówi się, gdy ktoś chce odnieść się do swojego poziomu biegłości językowej.
+      <p>
+          Jest to średnio-wysoki poziom, o którym mówi się, gdy ktoś chce odnieść się do swojego poziomu biegłości językowej.
 
            Oczekuje się, że mówca będzie w stanie zrozumieć i napisać złożone teksty na określone tematy i na pewnym poziomie abstrakcji (napisać podanie o pracę, napisać recenzję filmu, programu lub książki, napisać esej na temat problemu, np. styl życia, dieta lub środowisko)
 
