--- a/pl/english-a1.html
+++ b/pl/english-a1.html
@@ -86,7 +86,7 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>English A1</h2>
+          <h2>Angielski A1</h2>
           <p>
             Jest to najbardziej podstawowy poziom opanowania języka. Na tym poziomie oczekuje się, że mówca będzie w stanie łatwo wchodzić w interakcje z innymi, którzy starają się mówić powoli i wyraźnie, a nie w naturalnym rytmie konwersacji.
 
