--- a/pl/english-a2.html
+++ b/pl/english-a2.html
@@ -86,7 +86,7 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>English A2</h2>
+          <h2>Angielski A2</h2>
       <p>
         Na tym poziomie struktury gramatyczne i umiejętności komunikacyjne z poprzedniego poziomu są nieco bardziej rozwinięte. Od mówcy oczekuje się umiejętności opisywania w teraźniejszości i przeszłości prostych aspektów swojego najbliższego otoczenia (rodzina, zakupy, praca, kierunki) oraz komunikowania w prosty sposób podstawowych, prostych i bezpośrednich wymian informacji.
                    Kurs jest podzielony na trzy moduły, z których każdy składa się z różnych jednostek obejmujących zawartość A1 i pozwalających pod koniec kursu wyrazić podstawowe pojęcia i rozpocząć swoją przygodę z językiem.
