--- a/pl/english-b1.html
+++ b/pl/english-b1.html
@@ -87,7 +87,7 @@
 <div class="wrapper">
   <article class="img-info">
 
-          <h2>English B1</h2>
+          <h2>Angielski B1</h2>
       <p>
         Zbliżamy się do typowego „poziomu średniego”, którym szczyci się wiele programów bez akredytacji żadnej instytucji.
 
