--- a/pl/english-b2.html
+++ b/pl/english-b2.html
@@ -86,7 +86,7 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>English B2</h2>
+          <h2>Angielski B2</h2>
       <p>
         Jest to średnio-wysoki poziom, o którym mówi się, gdy ktoś chce odnieść się do swojego poziomu biegłości językowej.
 
