--- a/pl/english-c1.html
+++ b/pl/english-c1.html
@@ -87,7 +87,7 @@
 <div class="wrapper">
   <article class="img-info">
 
-          <h2>English C1</h2>
+          <h2>Angielski C1</h2>
       <p>
         Jest to tak zwany „wysoki poziom” w opanowaniu języka.
 
