--- a/pl/english-c2.html
+++ b/pl/english-c2.html
@@ -86,7 +86,7 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>English C2</h2>
+          <h2>Angielski C2</h2>
       <p>
 
         I wreszcie dochodzimy do szczytu piramidy, poziomu równego poziomowi tubylca, nawet jeśli można rozpoznać, że język ojczysty danej osoby jest inny.
