--- a/es/english-a1.html
+++ b/es/english-a1.html
@@ -86,7 +86,7 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>English A1</h2>
+          <h2>Inglés A1</h2>
           <p>
             Este es el nivel más básico de dominio de un idioma. En este nivel se espera que el hablante pueda interactuar fácilmente con otros que se esfuerzan por hablar despacio y con claridad, sin un ritmo de conversación natural.
 
