--- a/es/english-b1.html
+++ b/es/english-b1.html
@@ -87,7 +87,7 @@
 <div class="wrapper">
   <article class="img-info">
 
-          <h2>English B1</h2>
+          <h2>Inglés B1</h2>
       <p>
         Nos estamos acercando al típico "nivel medio" que se precia en muchos planes de estudio sin estar acreditado por ninguna institución.
 
