--- a/es/english-b2.html
+++ b/es/english-b2.html
@@ -86,7 +86,7 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>English B2</h2>
+          <h2>Inglés B2</h2>
       <p>
         Este es el nivel medio-alto del que se habla cuando alguien quiere referirse a su nivel de dominio del idioma.
 
