--- a/es/english-c1.html
+++ b/es/english-c1.html
@@ -87,7 +87,7 @@
 <div class="wrapper">
   <article class="img-info">
 
-          <h2>English C1</h2>
+          <h2>Inglés C1</h2>
       <p>
         Es lo que se conoce como un "nivel alto" en el dominio de un idioma.
 
