--- a/es/english-a2.html
+++ b/es/english-a2.html
@@ -86,7 +86,7 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>English A2</h2>
+          <h2>Inglés A2</h2>
       <p>
         En este nivel se desarrollan un poco más las estructuras gramaticales y las habilidades comunicativas del nivel anterior. Se espera que el hablante sea capaz de describir en presente y en pasado aspectos sencillos de su entorno inmediato (familia, compras, trabajo, direcciones) así como comunicar de forma sencilla intercambios de información básicos, sencillos y directos.
                    El curso se divide en tres módulos, cada uno de los cuales consta de varias unidades que cubren los contenidos de A1 y le permiten, al final del curso, poder expresar ideas básicas y comenzar su viaje en el idioma.
