--- a/es/english-c2.html
+++ b/es/english-c2.html
@@ -86,7 +86,7 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>English C2</h2>
+          <h2>Inglés C2</h2>
       <p>Y llegamos finalmente a la cúspide de la pirámide, el nivel que se equipara al de un nativo, aun cuando se pueda discernir que la lengua materna de la persona es otra.
 
           La pronunciación del hablante es casi perfecta con poquísimos errores que a veces incluso pasan desapercibidos. Puede expresarse espontáneamente con mucha fluidez utilizando un lenguaje variado e incluso haciendo uso de regionalismos.
