--- a/es/b2-intermedioalto.html
+++ b/es/b2-intermedioalto.html
@@ -112,7 +112,7 @@
                 </select>
                   </div>
               <p><h2>Español B2(intermedio alto) Online</h2></p>
-              <p>In B1 you consolidate your knowledge about the different past tenses and learn about a new and complex grammar topic: el subjuntivo. Your richer vocabulary and your ability with grammar help you start producing simple connected texts on topics that are familiar or of personal interest. You can also describe experiences and events, dreams, hopes and ambitions and briefly give reasons and explanations for opinions and plans. After B1 you already have a large understanding about the Español language. Even though you might still not speak in a highly sophisticated way you have already a very good level to start functioning in Español, also in a professional level.
+              <p>In B1 you consolidate your knowledge about the different Pretérito tenses and learn about a new and complex grammar topic: el subjuntivo. Your richer vocabulary and your ability with grammar help you start producing simple connected texts on topics that are familiar or of personal interest. You can also describe experiences and events, dreams, hopes and ambitions and briefly give reasons and explanations for opinions and plans. After B1 you already have a large understanding about the Español language. Even though you might still not speak in a highly sophisticated way you have already a very good level to start functioning in Español, also in a professional level.
                 <button onclick="toggleContent72()" style="background-color:blue;color:white;">Leer más</button>
                 <div id="content72" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
