--- a/es/b1-intermedio2.html
+++ b/es/b1-intermedio2.html
@@ -113,7 +113,7 @@
           </div>
 
               <p><h2>Español B1(intermedio) Estacionario</h2></p>
-              <p>We are getting closer to the typical "medium level" that is boasted in many curricula without being accredited by any institution. At this level the speaker must be able to engage in conversation with native speakers in everyday life situations (work, school, a restaurant). Abstract vocabulary begins to be mastered and the speaker can describe his experiences or events that have happened to him in the past. He can talk about dreams, ambitions, and hopes for the future. He is able to express his opinion on blueprints and give explanations for his actions.
+              <p>We are getting closer to the typical "medium level" that is boasted in many curricula without being accredited by any institution. At this level the speaker must be able to engage in conversation with native speakers in everyday life situations (work, school, a restaurant). Abstract vocabulary begins to be mastered and the speaker can describe his experiences or events that have happened to him in the Pretérito. He can talk about dreams, ambitions, and hopes for the future. He is able to express his opinion on blueprints and give explanations for his actions.
                 <button onclick="toggleContent70()" style="background-color:blue;color:white;">Leer más</button>
                 <div id="content70" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
