--- a/es/english-a2.html
+++ b/es/english-a2.html
@@ -105,7 +105,7 @@
                <div id="content51" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfpFVhUuUH6Xak2xcXn4QM8WpLT_HGbdPqrGHB6xSYrZ530kw/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
                </div><br>
-   <button onclick="toggleContent52()">Final Test</button>
+   <button onclick="toggleContent52()">Test Final</button>
               <div id="content52" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScT178CMb2ynSmMt85vPByFjBslG9m98Iq9PRLtNr4vD3BuKg/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
               </div>
@@ -157,7 +157,7 @@
                                 <div id="content48" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                 <iframe src="https://quizlet.com/582804367/match/embed?i=2nc5sb&x=1jj1" height="700" width="100%" style="border:0"></iframe>
                                 </div>
-      <button onclick="toggleContent97()">Irreg Verbs (past)</button>
+      <button onclick="toggleContent97()">Irreg Verbs (Pretérito)</button>
                                  <div id="content97" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                   <iframe src="https://learningapps.org/watch?v=p6s1fona323" height="700" width="100%" style="border:0"></iframe>
                                  </div>
