--- a/es/japanese-a1.html
+++ b/es/japanese-a1.html
@@ -112,7 +112,7 @@
               <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd-t_f4EjtTyf01l28-xg_JK7AG35rXteutPB5d3CsZS9og-g/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
           </div>
 
-      <button onclick="toggleContent9()">Final Test</button>
+      <button onclick="toggleContent9()">Test Final</button>
   <div id="content9" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScHScRBBLWQQ5Hi_GKBaXaopbbFd9-5j40vWw7m4ncB7fxLOQ/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
       </div>
@@ -169,7 +169,7 @@
                       <div id="content20" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                           <iframe src="https://learningapps.org/watch?v=pj9sijmzt21" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                       </div>
-    <button onclick="toggleContent58()">Conjugation of Irregular Verbs (Present)</button>
+    <button onclick="toggleContent58()">Conjugation of Verbos Irregulares (Present)</button>
                  <div id="content58" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                       <iframe src="https://learningapps.org/watch?v=p2mqupsej22" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
 
