--- a/es/japanese-b1.html
+++ b/es/japanese-b1.html
@@ -96,62 +96,62 @@
                 Se empieza a dominar el vocabulario abstracto y el hablante puede describir sus experiencias o hechos que le han sucedido en el pasado. Puede hablar de sueños, ambiciones y esperanzas para el futuro. Es capaz de expresar su opinión sobre los planes y dar explicaciones sobre sus acciones.
 
                    </p>
-      <h2>Past Indicative Mode</h2>
-      <button onclick="toggleContent22()">Exercises 1: Imperfect or Indefinite?</button>
+      <h2>Pretérito Indicativo Modo</h2>
+      <button onclick="toggleContent22()">Ejercicios 1: Imperfecto o Indefinido?</button>
       <div id="content22" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
           <iframe src="https://learningapps.org/watch?app=9373009" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
       </div>
-      <button onclick="toggleContent23()">Exercises 2: Imperfect or Indefinite?</button>
+      <button onclick="toggleContent23()">Ejercicios 2: Imperfecto o Indefinido?</button>
           <div id="content23" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
               <iframe src="https://learningapps.org/watch?app=4824509" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
        </div>
 
-      <button onclick="toggleContent24()">Exercises 3: Imperfect or Indefinite?</button>
+      <button onclick="toggleContent24()">Ejercicios 3: Imperfecto o Indefinido?</button>
               <div id="content24" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                   <iframe src="https://learningapps.org/watch?app=5503853" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
               </div>
 
-      <button onclick="toggleContent25()">Exercises 4: Imperfect or Indefinite?</button>
+      <button onclick="toggleContent25()">Ejercicios 4: Imperfecto o Indefinido?</button>
                   <div id="content25" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                       <iframe src="https://learningapps.org/watch?app=9373630" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                        </div>
 
-     <button onclick="toggleContent53()">Past Indefinite Irregular Verbs</button>
+     <button onclick="toggleContent53()">Pretérito Indefinite Verbos Irregulares</button>
                  <div id="content53" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                       <iframe src="https://learningapps.org/watch?v=p15xcysdn21" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                       </div>
-    <button onclick="toggleContent54()">Contrast of pasts</button>
+    <button onclick="toggleContent54()">Constraste de Pretéritos</button>
                 <div id="content54" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                       <iframe src="https://learningapps.org/watch?v=prmp3vi8321" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                      </div>
-   <button onclick="toggleContent57()">Subjuntive 1</button>
+   <button onclick="toggleContent57()">Subjuntivo 1</button>
                <div id="content57" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                       <iframe src="https://learningapps.org/watch?app=26338883" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                     </div><br>
 
       <h2>Subjuntivo</h2>
-          <button onclick="toggleContent2()">Exercises 1: Present (Subjunctive)</button>
+          <button onclick="toggleContent2()">Ejercicios 1: Present (Subjuntivo)</button>
           <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
               <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScjyBeOloKi6KEQOwbf1mHMHoMM3MKKGP9Ce2N-9APftX7-BA/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
        </div>
 
-      <p><button onclick="toggleContent3()">Exercises 2: Past Perfect (Subjunctive)</button>
+      <p><button onclick="toggleContent3()">Ejercicios 2: Pretérito Perfect (Subjuntivo)</button>
       <div id="content3" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfXPGQMhfO49gtgzG1k_K2mHASXGkBpIwN7Ot-L6FDh4LARbw/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
        </div>
 
-      <p><button onclick="toggleContent4()">Exercises 3: Pluperfect (Subjunctive)</button>
+      <p><button onclick="toggleContent4()">Ejercicios 3: Pluperfect (Subjuntivo)</button>
           <div id="content4" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
               <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfe2pGNII7r9SghqIryRkuUGYKO04ca-wiWN8twfcclil5OVQ/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
 
       </div>
 
-     <p><button onclick="toggleContent5()">Exercises 4: Subjunctive or Indicative? (1)</button>
+     <p><button onclick="toggleContent5()">Ejercicios 4: Subjuntivo or Indicativo? (1)</button>
       <div id="content5" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdjoBSZ8Agf4YDu121N5GMDoBNw9t8WV4XUH3aShgl8v8FDXw/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
       </div>
 
-      <p><button onclick="toggleContent6()">Exercises 5: Subjunctive or Indicative? (2)</button>
+      <p><button onclick="toggleContent6()">Ejercicios 5: Subjuntivo or Indicativo? (2)</button>
       <div id="content6" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScqYrakNq_ag5UaitM5qoPUC3fpyxts2HWZzR0kVJLpQJu0tg/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
       </div>
@@ -162,7 +162,7 @@
                   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeb3Bwp4fv_QzsSy9B1Tuij1qnu0QWhD3l4iTxaCVT5QR0C6g/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
       </div>
 
-      <p><button onclick="toggleContent34()">Final Test B1.2</button>
+      <p><button onclick="toggleContent34()">Test Final B1.2</button>
               <div id="content34" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf3qWVbEBtC3l0vTqoMBksolw58ihzvJjcY0zWyAV1w45Xv2g/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
 
