--- a/es/spanish-b1.html
+++ b/es/spanish-b1.html
@@ -140,7 +140,7 @@
                       <iframe src="https://learningapps.org/watch?app=9373630" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                        </div>
 
-     <button onclick="toggleContent53()">Past Indefinitivo Verbos Irreg.</button>
+     <button onclick="toggleContent53()">Pretérito Indefinitivo Verbos Irreg.</button>
                  <div id="content53" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                       <iframe src="https://learningapps.org/watch?v=p15xcysdn21" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                       </div>
