--- a/es/japanese-b1.html
+++ b/es/japanese-b1.html
@@ -130,17 +130,17 @@
                     </div><br>
 
       <h2>Subjuntivo</h2>
-          <button onclick="toggleContent2()">Ejercicios 1: Present (Subjuntivo)</button>
+          <button onclick="toggleContent2()">Ejercicios 1: Presente (Subjuntivo)</button>
           <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
               <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScjyBeOloKi6KEQOwbf1mHMHoMM3MKKGP9Ce2N-9APftX7-BA/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
        </div>
 
-      <p><button onclick="toggleContent3()">Ejercicios 2: Pretérito Perfect (Subjuntivo)</button>
+      <p><button onclick="toggleContent3()">Ejercicios 2: Pretérito Perfecto (Subjuntivo)</button>
       <div id="content3" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfXPGQMhfO49gtgzG1k_K2mHASXGkBpIwN7Ot-L6FDh4LARbw/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
        </div>
 
-      <p><button onclick="toggleContent4()">Ejercicios 3: Pluperfect (Subjuntivo)</button>
+      <p><button onclick="toggleContent4()">Ejercicios 3: Pluscuamperfecto (Subjuntivo)</button>
           <div id="content4" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
               <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfe2pGNII7r9SghqIryRkuUGYKO04ca-wiWN8twfcclil5OVQ/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
 
