--- a/es/english-a2.html
+++ b/es/english-a2.html
@@ -91,6 +91,11 @@
         En este nivel se desarrollan un poco más las estructuras gramaticales y las habilidades comunicativas del nivel anterior. Se espera que el hablante sea capaz de describir en presente y en pasado aspectos sencillos de su entorno inmediato (familia, compras, trabajo, direcciones) así como comunicar de forma sencilla intercambios de información básicos, sencillos y directos.
                    El curso se divide en tres módulos, cada uno de los cuales consta de varias unidades que cubren los contenidos de A1 y le permiten, al final del curso, poder expresar ideas básicas y comenzar su viaje en el idioma.
 
+<h2>Práctica</h2>
+                   <button onclick="toggleContent97()">Irreg Verbs (past)</button>
+                                              <div id="content97" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                               <iframe src="https://learningapps.org/watch?v=p6s1fona323" height="700" width="100%" style="border:0"></iframe>
+                                              </div>
 
 </div>
                        </article>
