--- a/english-a2.html
+++ b/english-a2.html
@@ -90,6 +90,9 @@
       <p>
         At this level, the grammatical structures and communication skills of the previous level are developed a little more. The speaker is expected to be able to describe in the present and in the past simple aspects of his immediate environment (family, shopping, work, directions) as well as to communicate in a simple way basic, simple and direct exchanges of information.
           The course is divided in three modules each consisting of various units covering the A1 contents and allowing you by the end of the course, to be able to express basic ideas and start your journey in the language.
+
+          <h2>Práctica</h2>
+
       <button onclick="toggleContent97()">Irreg Verbs (past)</button>
                                  <div id="content97" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                   <iframe src="https://learningapps.org/watch?v=p6s1fona323" height="700" width="100%" style="border:0"></iframe>
