--- a/blog.html
+++ b/blog.html
@@ -168,7 +168,7 @@
           <span class="dots">...</span>
           <span class="more">
               <p>
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vT6wNmMP5XfCOx8fx4miKS8EfVbBc8IPtAcQuDeA6TL8DXGMARTSFebiAjxWVKl4UqmosXtr6y0Lk5a/pub?embedded=true" style="border:none;" width="100%"; height="500px"></iframe>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/0KYNgzrpAGKTpyeEshg0P2?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
               </p>
 
 
