--- a/blog.html
+++ b/blog.html
@@ -105,7 +105,7 @@
           <span class="dots">...</span>
           <span class="more">
 
- <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/53F3aqN0EH5swCctu0mvOU?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" style="border:none;" width="100%"; height="500px"></iframe>
+ <iframe src="https://docs.google.com/document/d/e/2PACX-1vTggbn0rxJVPSbMX9lKv1ih_lN6ntH3wlhSyzjThX3cUkk6kyX7cuInung04uwS9sccU8WVQGCz7Fbl/pub?embedded=true" style="border:none;" width="100%"; height="500px"></iframe>
 
      <iframe src="https://docs.google.com/document/d/e/2PACX-1vQGEYXUNiw95GZkLV7oKrCnMqP10jYBLKhm7R2T8NYEEnPa01stYLN9Vu0tdapwpkdJE-jlI6RUtcOr/pub?embedded=true" style="border:none;" width="100%"; height="500px"></iframe>
 
