--- a/index-provisional.html
+++ b/index-provisional.html
@@ -12,37 +12,15 @@
   <link rel="stylesheet" href="css/style.css">
 
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-60445910-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-60445910-1');
-</script>
 <body>
-
-<header>
-    <a href="index.html" class="logo">Rodare</a>
 
     <input type="checkbox" id="menu-bar">
     <label for="menu-bar">Menu</label>
 
-    <img class="img-banner" src="images/banner2b.jpg" alt="libros">
-    <img class="img-banner2" src="images/banner4.jpg" alt="libros2">
-
-    <div class="translate">
-                    <!-- GTranslate: https://gtranslate.io/ -->
-                    <a href="#" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                    <a href="es/index.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
-                    <a href="pl/index.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
-
-                  </div>
-      <!-- end of GTranslate-->
+<header>    <img class="img-banner" src="images/banner2b.jpg" alt="libros"> </header>
 
 
-    <nav class="dropdown">
+    <nav class="navbar">
                     <ul>
                       <li><a href="index.html">home</a></li>
                       <li><a href="blog.html">blog</a></li>
@@ -90,12 +68,11 @@
                       <li><a href="signup.html">sign-up</a></li>
                     </ul>
 
-                  </nav>
-</header>
+      </nav>
 
-<div class="wrapper">
+
+  <div class="wrapper">
   <div class="img-info">
-
     <h2>About the site</h2>
                          <p>
     Welcome to Rodrigo Arenas Catalán's course site.
@@ -103,10 +80,21 @@
     <br>Greetings,<br>
     Rodrigo Arenas Catalán.
     </p>
-    <div class="responsive">
-    <img class="img-me" src="images/fachada.jpg" style="width: 100%; height: auto;" alt="fachada">
-    </div>
-  </div>
+  
+<div class="wrap">
+
+
+<div class="box">
+
 </div>
+
+
+</div>
+
+
+
+</div>
+</div>
+
 </body>
 </html>
