--- a/pl/blog2022.html
+++ b/pl/blog2022.html
@@ -126,9 +126,10 @@
       </div>
       <div class="card">
         <h3>Posts by Year</h3>
-        <a href="blog.html"><div class="fakeimg">2023</div></a><br>
+        <a href="blog.html"><div class="fakeimg">2024</div></a><br>
+        <a href="blog2023.html"><div class="fakeimg">2023</div></a><br>
         <a href="blog2022.html"><div class="fakeimg">2022</div></a><br>
-        <a href="blog2021.html"><div class="fakeimg">2021</div></a>
+
       </div>
       <div class="card">
         <h3>Follow Me</h3>
